wasm/fasta_reverse_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_nnky0zvw/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/92e6c1598d5ee0906adf2b444806fccc91cd65b3.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/92e6c1598d5ee0906adf2b444806fccc91cd65b3.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/53e82f69696eb26bc5bd9d770a70679d482a28bc.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/53e82f69696eb26bc5bd9d770a70679d482a28bc.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/5461b3e391da91e48ddb22e6c725cff70dd0d406.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/5461b3e391da91e48ddb22e6c725cff70dd0d406.json" for subsequent builds)
cache:INFO:  - ok
